--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <!-- /* --------- main btn --------- */ -->
         <nav class="main-btn">
             <ul>
-                <li><a href="./report.html"><img src="./IMG/index/report-icon-B.png" alt=""><span>REPORT</span></a></li>
-                <li><a href="./course.html"><img src="./IMG/index/course-icon-B.png" alt=""><span>COURSE</span></a></li>
-                <li><a href="./lift_fee.html"><img src="./IMG/index/lift-icon-B.png" alt=""><span>LIFT FEE</span></a></li>
-                <li><a href="./rental.html"><img src="./IMG/index/rental-icon-B.png" alt=""><span>RENTAL</span></a></li>
-                <li><a href="./school.html"><img src="./IMG/index/lesson-icon-B.png" alt=""><span>SCHOOL</span></a></li>
-                <li><a href="./access.html"><img src="./IMG/index/access-icon-B.png" alt=""><span>ACCESS</span></a></li>
+                <li><a href="./report.html"><img src="./IMG/index/report-icon-W.png" alt=""><span>REPORT</span></a></li>
+                <li><a href="./course.html"><img src="./IMG/index/course-icon-W.png" alt=""><span>COURSE</span></a></li>
+                <li><a href="./lift_fee.html"><img src="./IMG/index/lift-icon-W.png" alt=""><span>LIFT FEE</span></a></li>
+                <li><a href="./rental.html"><img src="./IMG/index/rental-icon-W.png" alt=""><span>RENTAL</span></a></li>
+                <li><a href="./school.html"><img src="./IMG/index/lesson-icon-W.png" alt=""><span>SCHOOL</span></a></li>
+                <li><a href="./access.html"><img src="./IMG/index/access-icon-W.png" alt=""><span>ACCESS</span></a></li>
             </ul>
         </nav>
 
