--- a/lift_fee.html
+++ b/lift_fee.html
@@ -75,7 +75,7 @@
             <!-- /* -------------- form -------------- */ -->
 
             <section class="form">
-                <img src="./IMG/contour_map.jpg" alt="">
+                <img src="./IMG/lift_fee/fee-reg.png" alt="">
                 
                 
             </section>
