--- a/report.html
+++ b/report.html
@@ -58,16 +58,16 @@
 
             <section class="left">
                 <span class="info-q">Snow Accumulation</span>
-                <span class="info-a">370 cm</span>
-                <span class="info-aa">220 cm</span>
+                <span class="info-a" id="infoa">370 cm</span>
+                <span class="info-aa" id="infoa">220 cm</span>
             </section>
             <section class="mid">
                 <span class="info-q">Quality</span>
-                <span class="info-a">Dry Snow</span>
+                <span class="info-a" id="infoa">Dry Snow</span>
             </section>
             <section class="right">
                 <span class="info-q">24hr Snowfall</span>
-                <span class="info-a">60 cm</span>
+                <span class="info-a"id="infoa">60 cm</span>
             </section>
 
         </section>
@@ -128,7 +128,7 @@
     <!-- /* --------------- lift & course -------------- */ -->
     <article class="lift_course">
 
-        <section class="pic">
+        <section class="pic" id="lift_pic">
             <img src="./IMG/lift_course.png" alt="">
         </section>
 
@@ -158,7 +158,7 @@
     <!-- /* --------------- live cam -------------- */ -->
     <article class="live_cam">
 
-        <span class="title">LIVE CAM</span>
+        <span class="title" id="cam_title">LIVE CAM</span>
 
         <section class="cam">
             <ul>
@@ -198,16 +198,24 @@
     
                 <section class="info-sns">
 
-                    <a href="#"><img src="./IMG/sns_icon/yt_icon.png" alt=""></a>
-                    <a href="#"><img src="./IMG/sns_icon/twitter_icon.png" alt=""></a>
-                    <a href="#"><img src="./IMG/sns_icon/ig_icon.png" alt=""></a>
-                    <a href="#"><img src="./IMG/sns_icon/fb_icon.png" alt=""></a>
+                    <a href="#" class="sns"><img id="yt" src="./IMG/sns_icon/yt_icon.png" alt=""></a>
+                    <a href="#" class="sns"><img id="twitter" src="./IMG/sns_icon/twitter_icon.png" alt=""></a>
+                    <a href="#" class="sns"><img id="ig" src="./IMG/sns_icon/ig_icon.png" alt=""></a>
+                    <a href="#" class="sns"><img id="fb" src="./IMG/sns_icon/fb_icon.png" alt=""></a>
 
                 </section>    
             </section>
         </section>
     </footer>
 
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+    <script src="./js/report.js"></script>
     <script src="./js/common.js"></script>
 </body>
 </html>
